add format helper for displaying bonus with leading + sign

--- a/app/views/characters/_abilities.html.haml
+++ b/app/views/characters/_abilities.html.haml
@@ -10,4 +10,4 @@
       %tr
         %th= abbrev
         %td.numeric= character.prop_value abbrev
-        %td.numeric= character.prop_modifier abbrev
+        %td.numeric= as_bonus(character.prop_modifier abbrev)
